# hl7-definitions

./: Cargo.toml  README.md  build.rs
assets/: LICENSE  README.md  tables.json
examples/: describe_adt_a01.rs
src/: lib.rs
tests/: proper_optionality.rs
