[package]
name = "hl7-definitions"
authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]
version = "0.0.2"
edition = "2021"
build = "build.rs"
description = "Statically compiled definitions of HL7 messages across the HL7v2 versions"
documentation = "https://docs.rs/hl7-definitions"
repository = "https://github.com/hamaluik/hl7-definitions"
readme = "README.md"
license = "Apache-2.0"

[features]
21 = []
22 = []
23 = []
231 = []
24 = []
25 = []
251 = []
26 = []
27 = []
271 = []
tables = []
default = ["21", "22", "23", "231", "24", "25", "251", "26", "27", "271", "tables"]

[dependencies]
phf = "0.11"

[build-dependencies]
phf_codegen = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

